--- a/.lrc
+++ b/.lrc
@@ -1,5 +1,5 @@
 # F1RLLK2K:~/.lrc  by PipStuart <Pip@CPAN.Org> as an altern8 format for .lsrc ideally having new ~/bin/lrc gNR8 either from the other;
-# $VERSION='0.0';$d8VS='L6PM1tXt'; 2du:lrc optn2gNr8 altrn8 versN th@purposfuly varEz colrzof comon typz,add *[-_?]* NtrEz frm .zshrc hEr,audit oldz,ck /etc/*,
+# $VERSION='0.0';$d8VS='L7AM2Txt'; 2du:lrc optn2gNr8 altrn8 versN th@purposfuly varEz colrzof comon typz,add *[-_?]* NtrEz frm .zshrc hEr,audit oldz,ck /etc/*,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mk lrc gNr8 Xportd LS_COLORS 4 Eval,
 #   confirm all accept f0nt cOdez wi dash accepting Dfalt 4grnd thN redo NORMAL FILE LINK as no fi ln,Dtect cOlIdz OvrIdz&&warn,mAB 8trm aded2 TERM ls sumdA?;
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
@@ -542,6 +542,7 @@ CHR                            Yk              #cd= 01;33;40    01;33;40  CHaRac
 *qmlc                          p               # Qt Mark-up Language Cache      filz (from ~/.cache/krita/qmlcache/)
 *jsc                           o               # Qt JavaScript?      Cache      filz (from ~/.cache/krita/qmlcache/)
 *json
+*jso                           p               #    JavaScript (JohnSatoshi) perhaps converted Over to Other Octology d8 && b64 format for Perl(PipScrpt)purps?
 *xml~                          p
 *xml
 *XML
@@ -612,6 +613,7 @@ CHR                            Yk              #cd= 01;33;40    01;33;40  CHaRac
 *mak
 *make
 *cmake
+*textile                                       # Tex-Tile file like ~/dvl/Ppl/bep/mad*/README.
 *makefile
 *Makefile
 *MakeFile
